# delivery_time_prediction

./: .gitignore  Makefile  README.md  app.py  d_t_p_eda.ipynb  delivery_t_pred.ipynb  dvc.yaml  params.yaml  pyproject.toml  requirement.txt  requirements-dev.txt  requirements.txt  temp.ipynb  test_data.csv  varcel.json
data/files_/: data_clean_script.py
data/processed/: .gitignore  cleaned_mvd.csv
data/raw/: train.csv.dvc
docs/: mkdocs.yml
docs/docs/: index.md
files_/: data_clean_script.py  hhh.py
frontend/: main.py
models/: .gitignore  power_transformer.joblib  preprocessor.joblib
notebooks/: BaseLine_model.ipynb  Experiment_1.ipynb  Experiment_2_missing indicator.ipynb  Experiment_4_rf.ipynb  Experiment_5_stacking_Regressor.ipynb  Experiment_6_final_ensemble_model.ipynb  Experimet_3_optuna.ipynb  d_t_p_eda.ipynb  final_model_tuning.ipynb
scripts/: data_cleaning_script.py
src/data/: data_cleaning.py  data_preparation.py
src/features/: data_preprocessing.py
src/models/: predict.py  register_model.py  train.py
streamlit/: main.py
temp_view/: experiment_on_both_raw_and_new_fast_api.py
