[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "d-time"
version = "0.0.1"
description = "Ml project that predicts food delivery time in minutes"
authors = [
  { name = "rabin" },
]

readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    
]
requires-python = "~=3.10.0"


[tool.ruff]
line-length = 99
src = ["d-time"]
include = ["pyproject.toml", "d-time/**/*.py"]

[tool.ruff.lint]
extend-select = ["I"]  # Add import sorting

[tool.ruff.lint.isort]
known-first-party = ["d-time"]
force-sort-within-sections = true

